<resources>
    <string name="app_name">StoreRush</string>
    <string name="app_desc">Tic Toc. Time is running out</string>

    <string name="login_button_store">Store</string>
    <string name="login_button_member">Member</string>


    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="store1">7-11(Kowloon)</string>
    <string name="store2">HKUST Park n Shop</string>
    <string name="store_setting_1">Upload Store Image</string>
    <string name="store_setting_2">Update Store Information</string>
    <string name="store_setting_3">Update Product Information</string>

    <string name="dialog_message">The product is %1$s. \nThe price is $%2$d. \n</string>
    <string name="dialog_title">Confirm to pay for the product</string>
    <string name="fire">Confirm</string>
    <string name="cancel">Cancel</string>
</resources>
