<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context="com.storerush.app.StorePage">


        <TextView
            android:id="@+id/storeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:padding="20px"
            android:gravity="center"
            android:text="@string/store1"/>

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/storeTitle"
            android:scaleType="centerInside"
            android:gravity="right|center_vertical"
            android:layout_margin="10px"
            android:background="@drawable/image_view_background"
            />

        <Button
            android:id="@+id/setting_button_1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background ="@drawable/custom_button"
            android:layout_below="@+id/imgView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/store_setting_1"
            android:layout_margin="10px"
            android:onClick="loadImagefromGallery"/>

        <View
            android:layout_below="@+id/setting_button_1"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#d9d9d9" />

        <Button
            android:id="@+id/setting_button_2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background ="@drawable/custom_button"
            android:layout_below="@+id/setting_button_1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/store_setting_2"
            android:layout_margin="10px"
            android:onClick="updateStoreInfo"/>


        <View
            android:layout_below="@+id/setting_button_2"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#d9d9d9" />

        <Button
            android:id="@+id/setting_button_3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background ="@drawable/custom_button"
            android:layout_below="@+id/setting_button_2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/store_setting_3"
            android:layout_margin="10px"
            android:onClick="uploadProductInfo"
            />

    </RelativeLayout>

