<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.storerush.app.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/linearLayout"
        android:background="@android:color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:id="@+id/logoImageView"
            android:src="@drawable/loginpage"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_desc"

            android:id="@+id/textView"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button_store"
                    android:id="@+id/storeBtn"
                    android:background="@color/colorApp"
                    android:textColor="@android:color/white"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button_member"
                    android:id="@+id/memberBtn"
                    android:background="@color/colorApp"
                    android:textColor="@android:color/white"
                    android:layout_toRightOf="@id/storeBtn"
                    android:layout_marginLeft="10dp"  />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
